@@ -4,6 +4,8 @@ Changes to Version 2.0-3
 
   o titleLabel() to format a label in title font and color; exported for plug-ins.
 
+  o Added histograms by group (suggestion of Sarah Dawson).
+
   o Small interface improvements.
 
 Changes to Version 2.0-2
